--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
         </div>
 
         <div class="mt-6 grid grid-cols-2 gap-4">
-          <div class="bg-slate-800 rounded-xl p-6 text-center ring-1 ring-slate-700 flex items-center justify-center">
+          <div class="bg-slate-800 rounded-xl p-6 text-center ring-1 ring-slate-700 flex items-center justify-center overflow-hidden">
             <div>
               <p class="text-xs uppercase text-slate-400 tracking-wide">Estado</p>
-              <p id="state" class="text-5xl font-extrabold mt-1">—</p>
+              <p id="state" class="text-4xl md:text-5xl font-extrabold mt-1 leading-none break-words">—</p>
             </div>
           </div>
           <div class="bg-slate-800 rounded-xl p-6 ring-1 ring-slate-700">
@@ -65,10 +65,10 @@
         </div>
 
         <div class="mt-6 grid grid-cols-2 gap-4">
-          <div class="bg-slate-800 rounded-xl p-6 text-center ring-1 ring-slate-700 flex items-center justify-center">
+          <div class="bg-slate-800 rounded-xl p-6 text-center ring-1 ring-slate-700 flex items-center justify-center overflow-hidden">
             <div>
               <p class="text-xs uppercase text-slate-400 tracking-wide">Estado</p>
-              <p id="stateA2" class="text-5xl font-extrabold mt-1">—</p>
+              <p id="stateA2" class="text-4xl md:text-5xl font-extrabold mt-1 leading-none break-words">—</p>
             </div>
           </div>
           <div class="bg-slate-800 rounded-xl p-6 ring-1 ring-slate-700">
