--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,20 @@
 </head>
 <body class="bg-slate-950 text-slate-50 min-h-screen">
   <div class="max-w-5xl mx-auto p-6">
+    
+    <!-- ENCABEZADO -->
     <header class="flex items-center justify-between">
-            <!-- TARJETAS A1 y A2 -->
+      <h1 class="text-2xl md:text-3xl font-bold tracking-tight">🚗 Parqueo — Monitor en tiempo real</h1>
+      <div class="flex items-center gap-2">
+        <span id="conn-dot" class="pulse-dot bg-red-500 inline-block"></span>
+        <span id="conn-text" class="text-sm text-slate-300">Desconectado</span>
+      </div>
+    </header>
+
+    <!-- TARJETAS DE ESTADO -->
+    <section class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
+      
+      <!-- TARJETA A1 -->
       <div class="bg-slate-900/60 backdrop-blur rounded-2xl p-5 ring-1 ring-slate-800 shadow-lg">
         <div class="flex items-center justify-between">
           <div>
@@ -36,7 +48,7 @@
           <div class="bg-slate-800 rounded-xl p-6 text-center ring-1 ring-slate-700 flex items-center justify-center overflow-hidden">
             <div>
               <p class="text-xs uppercase text-slate-400 tracking-wide">Estado</p>
-              <p id="state" class="text-4xl md:text-5xl font-extrabold mt-1 leading-none break-words">—</p>
+              <p id="state" class="text-3xl md:text-4xl font-extrabold mt-1 leading-none break-words">—</p>
             </div>
           </div>
           <div class="bg-slate-800 rounded-xl p-6 ring-1 ring-slate-700">
@@ -54,7 +66,7 @@
         </div>
       </div>
 
-      <!-- NUEVA TARJETA: A2 -->
+      <!-- TARJETA A2 -->
       <div class="bg-slate-900/60 backdrop-blur rounded-2xl p-5 ring-1 ring-slate-800 shadow-lg">
         <div class="flex items-center justify-between">
           <div>
@@ -68,7 +80,7 @@
           <div class="bg-slate-800 rounded-xl p-6 text-center ring-1 ring-slate-700 flex items-center justify-center overflow-hidden">
             <div>
               <p class="text-xs uppercase text-slate-400 tracking-wide">Estado</p>
-              <p id="stateA2" class="text-4xl md:text-5xl font-extrabold mt-1 leading-none break-words">—</p>
+              <p id="stateA2" class="text-3xl md:text-4xl font-extrabold mt-1 leading-none break-words">—</p>
             </div>
           </div>
           <div class="bg-slate-800 rounded-xl p-6 ring-1 ring-slate-700">
@@ -86,11 +98,11 @@
         </div>
       </div>
 
-
-      <div class="bg-gradient-to-br from-slate-900 to-slate-800 rounded-2xl p-5 ring-1 ring-slate-800 shadow-lg">
+      <!-- BLOQUE "CÓMO FUNCIONA" -->
+      <div class="bg-gradient-to-br from-slate-900 to-slate-800 rounded-2xl p-5 ring-1 ring-slate-800 shadow-lg md:col-span-2">
         <h3 class="text-lg font-semibold">Cómo funciona</h3>
         <ol class="mt-3 space-y-2 text-slate-300 text-sm list-decimal list-inside">
-          <li>El ESP32 mide la distancia con el sensor JSN‑SR04T (promedio de lecturas).</li>
+          <li>El ESP32 mide la distancia con el sensor JSN-SR04T (promedio de lecturas).</li>
           <li>Envía <code>distance_cm</code> por HTTP a <code>/api/reading</code> con su <code>token</code>.</li>
           <li>El servidor calcula <em>Ocupado</em> si la distancia ≤ umbral.</li>
           <li>La interfaz se actualiza en tiempo real vía Socket.IO.</li>
@@ -101,8 +113,9 @@
       </div>
     </section>
 
+    <!-- FOOTER -->
     <footer class="mt-8 text-slate-400 text-xs">
-      Node.js + Express + Socket.IO · Hecho para ESP32 + JSN‑SR04T
+      Node.js + Express + Socket.IO · Hecho para ESP32 + JSN-SR04T
     </footer>
   </div>
 
